// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandableCard Rendering: Card card renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 10,
        "width": "100%",
      },
    ]
  }
  testID="card"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 0,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 22,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1C2530",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "bold",
            "textAlign": "left",
          },
        ]
      }
      testID="card-title"
    >
      Title
    </Text>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="card-close-button"
    >
      <Image
        source={
          Object {
            "testUri": "../../../source/images/shrink-black.png",
          }
        }
        style={
          Array [
            Object {
              "height": 14,
              "width": 14,
            },
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 22,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 22,
        },
      ]
    }
    testID="card-content"
  />
</View>
`;

exports[`ExpandableCard Rendering: Tile should set tile color to passed tileColor value 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    Object {
      "bottom": 12,
      "left": 12,
      "right": 12,
      "top": 12,
    }
  }
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
      "width": "100%",
    }
  }
  testID="tile"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#00AEEF",
          "borderRadius": 10,
          "height": 48,
          "justifyContent": "center",
          "marginRight": 11,
          "width": 48,
        },
      ]
    }
    testID="tile-content"
  >
    <View />
  </View>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1C2530",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "bold",
            "textAlign": "left",
          },
        ]
      }
      testID="tile-title"
    >
      Some Title
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#97A4AB",
            "fontFamily": "System",
            "fontSize": 12,
            "fontWeight": "400",
            "marginBottom": -2,
            "marginTop": 3,
            "textAlign": "left",
          },
        ]
      }
      testID="tile-subtitle"
    >
      Some Subtitle
    </Text>
  </View>
</View>
`;

exports[`ExpandableCard Rendering: Tile tile renders correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    Object {
      "bottom": 12,
      "left": 12,
      "right": 12,
      "top": 12,
    }
  }
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
      "width": "100%",
    }
  }
  testID="tile"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#1C2530",
          "borderRadius": 10,
          "height": 48,
          "justifyContent": "center",
          "marginRight": 11,
          "width": 48,
        },
      ]
    }
    testID="tile-content"
  >
    <View />
  </View>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1C2530",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "bold",
            "textAlign": "left",
          },
        ]
      }
      testID="tile-title"
    >
      Title
    </Text>
  </View>
</View>
`;
